@@ -67,34 +67,9 @@ cdl_package CYGPKG_DEVS_FLASH_EDB7XXX {
         calculated    1
         no_define
         implements    CYGHWR_IO_FLASH_DEVICE
-        implements    CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM
     
-        compile       edb7xxx_flash.c
+        compile       edb7xxx_flash.c flash_query.c flash_program_buf.c flash_erase_block.c
     
-        make -priority 1 {
-            flash_erase_block.o: $(REPOSITORY)/$(PACKAGE)/src/flash_erase_block.c
-            $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -mcpu=strongarm -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_erase_block.c
-            echo " .globl flash_erase_block_end" >>flash_erase_block.s
-            echo "flash_erase_block_end:" >>flash_erase_block.s
-            $(CC) -c -o flash_erase_block.o flash_erase_block.s
-            $(AR) rcs $(PREFIX)/lib/libtarget.a flash_erase_block.o
-        }
-        make -priority 1 {
-            flash_program_buf.o: $(REPOSITORY)/$(PACKAGE)/src/flash_program_buf.c
-            $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -mcpu=strongarm -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_program_buf.c
-            echo " .globl flash_program_buf_end" >>flash_program_buf.s
-            echo "flash_program_buf_end:" >>flash_program_buf.s
-            $(CC) -c -o flash_program_buf.o flash_program_buf.s
-            $(AR) rcs $(PREFIX)/lib/libtarget.a flash_program_buf.o
-        }
-        make -priority 1 {
-            flash_query.o: $(REPOSITORY)/$(PACKAGE)/src/flash_query.c
-            $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -mcpu=strongarm -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_query.c
-            echo " .globl flash_query_end" >>flash_query.s
-            echo "flash_query_end:" >>flash_query.s
-            $(CC) -c -o flash_query.o flash_query.s
-            $(AR) rcs $(PREFIX)/lib/libtarget.a flash_query.o
-        }
     }
     cdl_component CYGPKG_DEVS_FLASH_STRATA_EDB7XXX {
         display       "Cirrus Logic EDB7xxx StrataFLASH memory support"
